fixed distorted images on safari

--- a/styles/recordings.css
+++ b/styles/recordings.css
@@ -1,18 +1,33 @@
 .latest,
 .other-albums {
   width: 100%;
-  height: 65vh;
+  height: 100%;
 
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin: 8vh 0;
+  margin-top: 4vh;
+}
+
+@media only screen and (max-width: 1150px) {
+  .latest,
+  .other-albums {
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 .album {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: flex-start;
+
+  /* background-color: blue; */
+}
+
+.other-albums .album {
+  margin-bottom: 4vh;
 }
 
 .album p {
@@ -20,7 +35,7 @@
 }
 
 .album img {
-  height: 100%;
+  height: 450px;
   width: auto;
 }
 
